# rfpkgdb-cli

./: README.rst  pyproject.toml  setup.py  test.py
pkgdb2client/: __init__.py  utils.py
rfpkgdb2client/: __init__.py  admin.py  cli.py  openidbaseclient.py  openidproxyclient.py  utils.py
rfpkgdb2client/client/: __init__.py  baseclient.py  fas2.py  fasproxy.py  openidbaseclient.py  openidproxyclient.py  proxyclient.py
